# morning-market-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dip-hunter.yml  market-open-update.yml  morning-brief.yml  morning-recs.yml
agent/: __init__.py  openai_client.py  perplexity_client.py  pipeline.py  rec_schema.py  recommendations.py  run.py  run_recs.py  schema.py
data/: sympathy_map.json  trading_rules.json
dip_hunter/: __init__.py  __main__.py  backtest.py  brief.py  confidence.py  config.py  portfolio.py  run.py  scanner.py  schemas.py  signals.py  tracker.py
dip_hunter/data/: picks_history.json  portfolio.json  portfolio_example.json  universe.json
tests/: test_dip_portfolio.py  test_dip_scanner.py  test_dip_signals.py  test_pipeline_smoke.py  test_recommendations.py  test_schema.py
